Add auth tests
